arrow 버튼 기능 구현

--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
 <body>
     <div id="test"></div>
     <div class="menu">
-        <div class="choice" onclick="viewArrow()">
-            <div class="arrow">
+        <div class="choice" >
+            <div class="arrow" >
             <div class="arrow_L"></div>
             <div class="arrow_R"></div>
         </div>
         </div>
         <div class="choice">
-            <div class="arrow">
+            <div class="arrow" >
                 <div class="arrow_L"></div>
                 <div class="arrow_R"></div>
             </div>
         </div>
         <div class="choice" >
-            <div class="arrow">
+            <div class="arrow" >
                 <div class="arrow_L"></div>
                 <div class="arrow_R"></div>
             </div>
