--- a/index.html
+++ b/index.html
@@ -1,66 +1,82 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>등록증만들기</title>
+    <link href="/style/style.css" rel="stylesheet">
     <script src="/js/jquery-1.12.4.js"></script>
     <script src="/js/html2canvas.js"></script>
     <style>
-        .choice{
-            width: 80px; height: 80px;
-            background: #999;
-            border-radius: 50px;
-        }
-        .arrow {
-            display: none;
-        }
-        .arrow_L{
-            width: 30px; height: 30px;
-            background: #444;
-            display: block;
-        }
-        .arrow_R{
-            width: 30px; height: 30px;
-            background: #222;
-            display: block;
-        }
-        #test{
-            width: 100px; height: 100px; background: #999;
-            display: block;
-        }
+
     </style>
 </head>
+
 <body>
-    <div id="test"></div>
-    <div class="menu">
-        <div class="choice" >
-            <div class="arrow" >
-            <div class="arrow_L"></div>
-            <div class="arrow_R"></div>
-        </div>
-        </div>
-        <div class="choice">
-            <div class="arrow" >
-                <div class="arrow_L"></div>
-                <div class="arrow_R"></div>
+    <div class="all_wrap">
+        <div class="menu_L"></div>
+        <div class="menu">
+            <div class="choice">
+                <div class="arrow">
+                    <div class="arrow_L"></div>
+                    <div class="arrow_R"></div>
+                </div>
             </div>
-        </div>
-        <div class="choice" >
-            <div class="arrow" >
-                <div class="arrow_L"></div>
-                <div class="arrow_R"></div>
+            <div class="choice">
+                <div class="arrow">
+                    <div class="arrow_L"></div>
+                    <div class="arrow_R"></div>
+                </div>
+            </div>
+            <div class="choice">
+                <div class="arrow">
+                    <div class="arrow_L"></div>
+                    <div class="arrow_R"></div>
+                </div>
+            </div>
+            <div class="choice">
+                <div class="arrow">
+                    <div class="arrow_L"></div>
+                    <div class="arrow_R"></div>
+                </div>
             </div>
         </div>
     </div>
 
-
+    <div class="main_wrap">
     <div id="card">
-        <img src="/sorce/card/gondew.jpg">
+        <img src="/sorce/card/gondew.jpg" style="width: 100%;">
     </div>
-<button  onclick="download()">저장하기</button>
-<a id="target" style="display: none;"></a>
+    <button onclick="download()">저장하기</button>
+    <a id="target" style="display: none;"></a>
+    </div>
+</div>
+<div class="menu_R">
+    <div class="menu_L"></div>
+        <div class="menu">
+            <div class="choice">
+                <div class="arrow">
+                    <div class="arrow_L"></div>
+                    <div class="arrow_R"></div>
+                </div>
+            </div>
+            <div class="choice">
+                <div class="arrow">
+                    <div class="arrow_L"></div>
+                    <div class="arrow_R"></div>
+                </div>
+            </div>
+            <div class="choice">
+                <div class="arrow">
+                    <div class="arrow_L"></div>
+                    <div class="arrow_R"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 <script src="/js/script.js"></script>
 
