--- a/index.html
+++ b/index.html
@@ -15,68 +15,74 @@
 </head>
 
 <body>
-    <div class="all_wrap">
-        <div class="menu_L"></div>
-        <div class="menu">
-            <div class="choice">
-                <div class="arrow">
-                    <div class="arrow_L"></div>
-                    <div class="arrow_R"></div>
+    <div class="container">
+        <div class="all_wrap">
+            <div class="menu">
+                <div class="choice">
+                    <div class="arrow">
+                        <div class="arrow_L"><img src="/sorce/samll_arrow_L.png"> </div>
+                        <div class="arrow_R"><img src="/sorce/small_arrow_R.png"></div>
+                    </div>
+                </div>
+                <div class="choice">
+                    <div class="arrow">
+                        <div class="arrow_L"><img src="/sorce/samll_arrow_L.png"> </div>
+                        <div class="arrow_R"><img src="/sorce/small_arrow_R.png"></div>
+                    </div>
+                </div>
+                <div class="choice">
+                    <div class="arrow">
+                        <div class="arrow_L"><img src="/sorce/samll_arrow_L.png"> </div>
+                        <div class="arrow_R"><img src="/sorce/small_arrow_R.png"></div>
+                    </div>
+                </div>
+                <div class="choice">
+                    <div class="arrow">
+                        <div class="arrow_L"><img src="/sorce/samll_arrow_L.png"> </div>
+                        <div class="arrow_R"><img src="/sorce/small_arrow_R.png"></div>
+                    </div>
                 </div>
             </div>
-            <div class="choice">
-                <div class="arrow">
-                    <div class="arrow_L"></div>
-                    <div class="arrow_R"></div>
-                </div>
-            </div>
-            <div class="choice">
-                <div class="arrow">
-                    <div class="arrow_L"></div>
-                    <div class="arrow_R"></div>
-                </div>
-            </div>
-            <div class="choice">
-                <div class="arrow">
-                    <div class="arrow_L"></div>
-                    <div class="arrow_R"></div>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <div class="main_wrap">
-    <div id="card">
-        <img src="/sorce/card/gondew.jpg" style="width: 100%;">
-    </div>
-    <button onclick="download()">저장하기</button>
-    <a id="target" style="display: none;"></a>
-    </div>
-</div>
-<div class="menu_R">
-    <div class="menu_L"></div>
-        <div class="menu">
-            <div class="choice">
-                <div class="arrow">
-                    <div class="arrow_L"></div>
-                    <div class="arrow_R"></div>
+
+
+            <div class="main_wrap">
+                <div class="card_wrap">
+                    <img class="big_arrow_L" src="/sorce/big_arrow_L.png" alt="">
+                    <div id="card">
+                        <img class="human" src="/sorce/base.png">
+                        <img src="/sorce/card/gondew.jpg">
+                        <a id="target" style="display: none;"></a>
+                    </div>
+                    <img class="big_arrow_R" src="/sorce/big_arrow_R.png" alt="">
                 </div>
+                <button onclick="download()">저장하기</button>
+                <div class="card_bg"><img src="/sorce/card_bg.png" style="width:986px"></div>
             </div>
-            <div class="choice">
-                <div class="arrow">
-                    <div class="arrow_L"></div>
-                    <div class="arrow_R"></div>
+
+            <div class="menu">
+                <div class="choice">
+                    <div class="arrow">
+                        <div class="arrow_L"><img src="/sorce/samll_arrow_L.png"> </div>
+                        <div class="arrow_R"><img src="/sorce/small_arrow_R.png"></div>
+                    </div>
                 </div>
-            </div>
-            <div class="choice">
-                <div class="arrow">
-                    <div class="arrow_L"></div>
-                    <div class="arrow_R"></div>
+                <div class="choice">
+                    <div class="arrow">
+                        <div class="arrow_L"><img src="/sorce/samll_arrow_L.png"> </div>
+                        <div class="arrow_R"><img src="/sorce/small_arrow_R.png"></div>
+                    </div>
+                </div>
+                <div class="choice">
+                    <div class="arrow">
+                        <div class="arrow_L"><img src="/sorce/samll_arrow_L.png"> </div>
+                        <div class="arrow_R"><img src="/sorce/small_arrow_R.png"></div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+    <div class="bg"></div>
 </body>
 <script src="/js/script.js"></script>
 
