cercle에 기능 추가, css완성

--- a/index.html
+++ b/index.html
@@ -45,13 +45,64 @@
             </div>
             <!-- 왼쪽메뉴 끝 -->
 
+<!-- ul의 리스트를 디스플레이 논
+ul의 퍼스트차일드 블록 -->
 
             <div class="main_wrap">
                 <div class="card_wrap">
                     <img class="big_arrow_L" src="/sorce/big_arrow_L.png" alt="">
                     <div id="card">
                         <!-- 옷입히기 소스 -->
+                        <div class="card_human">
                         <img class="human human_body" src="/sorce/base.png">
+                        <ul class=" hair">
+                            <li><img src="/sorce/hair01.png" alt=""></li>
+                            <li><img src="/sorce/hair02.png" alt=""></li>
+                            <li><img src="/sorce/hair03.png" alt=""></li>
+                            <li><img src="/sorce/hair04.png" alt=""></li>
+                            <li><img src="/sorce/hair05.png" alt=""></li>
+                            <li><img src="/sorce/hair06.png" alt=""></li>
+                            <li><img src="/sorce/hair07.png" alt=""></li>
+                            <li><img src="/sorce/hair08.png" alt=""></li>
+                        </ul>
+                        <ul class=" brows">
+                            <li><img src="/sorce/brows01.png" alt=""></li>
+                            <li><img src="/sorce/brows02.png" alt=""></li>
+                            <li><img src="/sorce/brows03.png" alt=""></li>
+                            <li><img src="/sorce/brows04.png" alt=""></li>
+                            <li><img src="/sorce/brows05.png" alt=""></li>
+                            <li><img src="/sorce/brows06.png" alt=""></li>
+                            <li><img src="/sorce/brows07.png" alt=""></li>
+                            <li><img src="/sorce/brows08.png" alt=""></li>
+                        </ul>
+                        <ul class=" eyes">
+                            <li><img src="/sorce/eyes01.png" alt=""></li>
+                            <li><img src="/sorce/eyes02.png" alt=""></li>
+                            <li><img src="/sorce/eyes03.png" alt=""></li>
+                            <li><img src="/sorce/eyes04.png" alt=""></li>
+                            <li><img src="/sorce/eyes05.png" alt=""></li>
+                            <li><img src="/sorce/eyes06.png" alt=""></li>
+                        </ul>
+                        <ul class=" lips">
+                            <li><img src="/sorce/lips01.png" alt=""></li>
+                            <li><img src="/sorce/lips02.png" alt=""></li>
+                            <li><img src="/sorce/lips03.png" alt=""></li>
+                            <li><img src="/sorce/lips04.png" alt=""></li>
+                            <li><img src="/sorce/lips05.png" alt=""></li>
+                            <li><img src="/sorce/lips06.png" alt=""></li>
+                            <li><img src="/sorce/lips07.png" alt=""></li>
+                        </ul>
+                        <ul class=" cloth">
+                            <li><img src="/sorce/cloth01.png" alt=""></li>
+                            <li><img src="/sorce/cloth02.png" alt=""></li>
+                            <li><img src="/sorce/cloth03.png" alt=""></li>
+                            <li><img src="/sorce/cloth04.png" alt=""></li>
+                            <li><img src="/sorce/cloth05.png" alt=""></li>
+                            <li><img src="/sorce/cloth06.png" alt=""></li>
+                            <li><img src="/sorce/cloth07.png" alt=""></li>
+                            <li><img src="/sorce/cloth08.png" alt=""></li>
+                        </ul>
+                    </div>
 
                         <!-- 옷입히기 소스 끝 -->
                         
