--- a/index.html
+++ b/index.html
@@ -18,90 +18,51 @@
         <div class="all_wrap">
             <!-- 왼쪽메뉴 시작 -->
             <div class="menu">
-                <div class="choice"><span class="material-icons-outlined gicons" >face</span>
+                <div class="choice"><span class="material-icons-outlined" >face</span>
                     <div class="arrow">
-                        <div class="arrow_L"><img src="/sorce/samll_arrow_L.png"> </div>
-                        <div class="arrow_R"><img src="/sorce/small_arrow_R.png"></div>
+                        <div class="arrow_L"><img src="/sorce/samll_arrow_L.png" onclick="hairSlide(0)"> </div>
+                        <div class="arrow_R"><img src="/sorce/small_arrow_R.png" onclick="hairSlide(1)"></div>
                     </div>
                 </div>
                 <div class="choice"><span class="material-icons-outlined">expand_less</span>
                     <div class="arrow">
-                        <div class="arrow_L"><img src="/sorce/samll_arrow_L.png"> </div>
-                        <div class="arrow_R"><img src="/sorce/small_arrow_R.png"></div>
+                        <div class="arrow_L"><img src="/sorce/samll_arrow_L.png" onclick="browSlide(0)"> </div>
+                        <div class="arrow_R"><img src="/sorce/small_arrow_R.png" onclick="browSlide(1)"></div>
                     </div>
                 </div>
                 <div class="choice"><span class="material-icons-outlined">visibility</span>
                     <div class="arrow">
-                        <div class="arrow_L"><img src="/sorce/samll_arrow_L.png"> </div>
-                        <div class="arrow_R"><img src="/sorce/small_arrow_R.png"></div>
+                        <div class="arrow_L"><img src="/sorce/samll_arrow_L.png" onclick="eyesSlide(0)"> </div>
+                        <div class="arrow_R"><img src="/sorce/small_arrow_R.png" onclick="eyesSlide(1)"></div>
                     </div>
                 </div>
                 <div class="choice"><span class="material-icons-outlined">mood</span>
                     <div class="arrow">
-                        <div class="arrow_L"><img src="/sorce/samll_arrow_L.png"> </div>
-                        <div class="arrow_R"><img src="/sorce/small_arrow_R.png"></div>
+                        <div class="arrow_L"><img src="/sorce/samll_arrow_L.png" onclick="lipsSlide(0)"> </div>
+                        <div class="arrow_R"><img src="/sorce/small_arrow_R.png" onclick="lipsSlide(1)"></div>
                     </div>
                 </div>
             </div>
             <!-- 왼쪽메뉴 끝 -->
 
-<!-- ul의 리스트를 디스플레이 논
-ul의 퍼스트차일드 블록 -->
 
             <div class="main_wrap">
+                
                 <div class="card_wrap">
                     <img class="big_arrow_L" src="/sorce/big_arrow_L.png" alt="">
                     <div id="card">
+                        <input type="text" class="name" id="name" placeholder="이름을 입력해주세요" maxlength="10">
+                        <input type="text" class="birth" placeholder="ex) 970120" maxlength="10">
+                        <input type="text" class="date" id="date" placeholder="등롞번호" maxlength="10">
                         <!-- 옷입히기 소스 -->
                         <div class="card_human">
                         <img class="human human_body" src="/sorce/base.png">
-                        <ul class=" hair">
-                            <li><img src="/sorce/hair01.png" alt=""></li>
-                            <li><img src="/sorce/hair02.png" alt=""></li>
-                            <li><img src="/sorce/hair03.png" alt=""></li>
-                            <li><img src="/sorce/hair04.png" alt=""></li>
-                            <li><img src="/sorce/hair05.png" alt=""></li>
-                            <li><img src="/sorce/hair06.png" alt=""></li>
-                            <li><img src="/sorce/hair07.png" alt=""></li>
-                            <li><img src="/sorce/hair08.png" alt=""></li>
-                        </ul>
-                        <ul class=" brows">
-                            <li><img src="/sorce/brows01.png" alt=""></li>
-                            <li><img src="/sorce/brows02.png" alt=""></li>
-                            <li><img src="/sorce/brows03.png" alt=""></li>
-                            <li><img src="/sorce/brows04.png" alt=""></li>
-                            <li><img src="/sorce/brows05.png" alt=""></li>
-                            <li><img src="/sorce/brows06.png" alt=""></li>
-                            <li><img src="/sorce/brows07.png" alt=""></li>
-                            <li><img src="/sorce/brows08.png" alt=""></li>
-                        </ul>
-                        <ul class=" eyes">
-                            <li><img src="/sorce/eyes01.png" alt=""></li>
-                            <li><img src="/sorce/eyes02.png" alt=""></li>
-                            <li><img src="/sorce/eyes03.png" alt=""></li>
-                            <li><img src="/sorce/eyes04.png" alt=""></li>
-                            <li><img src="/sorce/eyes05.png" alt=""></li>
-                            <li><img src="/sorce/eyes06.png" alt=""></li>
-                        </ul>
-                        <ul class=" lips">
-                            <li><img src="/sorce/lips01.png" alt=""></li>
-                            <li><img src="/sorce/lips02.png" alt=""></li>
-                            <li><img src="/sorce/lips03.png" alt=""></li>
-                            <li><img src="/sorce/lips04.png" alt=""></li>
-                            <li><img src="/sorce/lips05.png" alt=""></li>
-                            <li><img src="/sorce/lips06.png" alt=""></li>
-                            <li><img src="/sorce/lips07.png" alt=""></li>
-                        </ul>
-                        <ul class=" cloth">
-                            <li><img src="/sorce/cloth01.png" alt=""></li>
-                            <li><img src="/sorce/cloth02.png" alt=""></li>
-                            <li><img src="/sorce/cloth03.png" alt=""></li>
-                            <li><img src="/sorce/cloth04.png" alt=""></li>
-                            <li><img src="/sorce/cloth05.png" alt=""></li>
-                            <li><img src="/sorce/cloth06.png" alt=""></li>
-                            <li><img src="/sorce/cloth07.png" alt=""></li>
-                            <li><img src="/sorce/cloth08.png" alt=""></li>
-                        </ul>
+                        <img id="hair" src="/sorce/hair01.png" alt="">
+                        <img id="brows" src="/sorce/brows01.png" alt="">
+                        <img id="eyes" src="/sorce/eyes01.png" alt="">
+                        <img id="lips" src="/sorce/lips01.png" alt="">
+                        <img id="cloth" src="/sorce/cloth01.png" alt="">
+
                     </div>
 
                         <!-- 옷입히기 소스 끝 -->
@@ -132,20 +93,20 @@ ul의 퍼스트차일드 블록 -->
             <div class="menu">
                 <div class="choice"><span class="material-icons-outlined">checkroom</span>
                     <div class="arrow">
-                        <div class="arrow_L"><img src="/sorce/samll_arrow_L.png"> </div>
-                        <div class="arrow_R"><img src="/sorce/small_arrow_R.png"></div>
+                        <div class="arrow_L"><img src="/sorce/samll_arrow_L.png" onclick="clothSlide(0)"> </div>
+                        <div class="arrow_R"><img src="/sorce/small_arrow_R.png" onclick="clothSlide(1)"></div>
                     </div>
                 </div>
                 <div class="choice"><span class="material-icons-outlined">auto_awesome</span>
                     <div class="arrow">
-                        <div class="arrow_L"><img src="/sorce/samll_arrow_L.png"> </div>
-                        <div class="arrow_R"><img src="/sorce/small_arrow_R.png"></div>
+                        <div class="arrow_L"><img src="/sorce/samll_arrow_L.png" onclick=""> </div>
+                        <div class="arrow_R"><img src="/sorce/small_arrow_R.png" onclick=""></div>
                     </div>
                 </div>
                 <div class="choice"><span class="material-icons-outlined">yard</span>
                     <div class="arrow">
-                        <div class="arrow_L"><img src="/sorce/samll_arrow_L.png"> </div>
-                        <div class="arrow_R"><img src="/sorce/small_arrow_R.png"></div>
+                        <div class="arrow_L"><img src="/sorce/samll_arrow_L.png" onclick=""> </div>
+                        <div class="arrow_R"><img src="/sorce/small_arrow_R.png" onclick=""></div>
                     </div>
                 </div>
             </div>
