기본형 완성

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
             loop: true,
             speed : 10,
             effect: "fade",
+            touchRatio: 0,//드래그 금지
             navigation: {
                 nextEl: ".big_arrow_R",
                 prevEl: ".big_arrow_L",
